[package]
name = "slidy"
version = "0.1.0"
edition = "2021"
description = "Utilities for working with sliding puzzles"
license = "SSPL-1.0"
repository = "https://github.com/benwh1/slidy"
keywords = ["puzzle", "15-puzzle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enterpolation = "0.2.1"
itertools = "0.14.0"
num-traits = "0.2.19"
palette = "0.7.6"
rand = { version = "0.9.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", optional = true }
serde_derive = { version = "1.0.219", optional = true }
svg = "0.18.0"
thiserror = "2.0.12"

[dev-dependencies]
paste = "1.0.15"
rand_xoshiro = "0.7.0"

[features]
default = ["thread_rng"]
nightly = []
serde = [
    "enterpolation/serde",
    "palette/serializing",
    "dep:serde",
    "dep:serde_derive",
]
thread_rng = ["rand/thread_rng"]
