[package]
name = "slidy"
version = "0.2.0"
edition = "2021"
description = "Utilities for working with sliding puzzles"
license = "SSPL-1.0"
repository = "https://github.com/benwh1/slidy"
keywords = ["puzzle", "15-puzzle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.24.0"
enterpolation = "^0.2"
itertools = "^0.14"
num-traits = "^0.2"
palette = { version = "^0.7", default-features = false, features = ["std"] }
rand = { version = "^0.9", default-features = false, features = ["alloc"] }
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
svg = "^0.18"
thiserror = "^2.0"
xxhash-rust = { version = "^0.8", features = ["xxh3"] }

[dev-dependencies]
paste = "^1.0"
rand_xoshiro = "^0.7"

[features]
default = ["thread_rng"]
nightly = []
serde = [
    "enterpolation/serde",
    "palette/serializing",
    "dep:serde",
    "dep:serde_derive",
]
thread_rng = ["rand/thread_rng"]

[lints.clippy]
module_inception = "allow"
must_use_candidate = "warn"
as_pointer_underscore = "deny"
as_ptr_cast_mut = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
branches_sharing_code = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
cloned_instead_of_copied = "deny"
collection_is_never_read = "deny"
deref_by_slicing = "deny"
derive_partial_eq_without_eq = "deny"
doc_markdown = "deny"
double_must_use = "deny"
elidable_lifetime_names = "deny"
empty_drop = "deny"
empty_enum = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
equatable_if_let = "deny"
error_impl_error = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
expl_impl_clone_on_copy = "deny"
fallible_impl_from = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
fn_to_numeric_cast_any = "deny"
format_collect = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
get_unwrap = "deny"
if_not_else = "deny"
if_then_some_else_none = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
imprecise_flops = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
inefficient_to_string = "deny"
infinite_loop = "deny"
into_iter_without_iter = "deny"
invalid_upcast_comparisons = "deny"
items_after_statements = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
iter_without_into_iter = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
literal_string_with_formatting_args = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_instant_elapsed = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_midpoint = "deny"
manual_string_new = "deny"
map_err_ignore = "deny"
map_unwrap_or = "deny"
map_with_unused_argument_over_ranges = "deny"
match_bool = "deny"
match_wildcard_for_single_variants = "deny"
mismatching_type_param_order = "deny"
missing_asserts_for_indexing = "deny"
mod_module_files = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
mut_mut = "deny"
needless_bitwise_bool = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_for_each = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
negative_feature_names = "deny"
no_effect_underscore_binding = "deny"
non_send_fields_in_send_ty = "deny"
nonstandard_macro_braces = "deny"
non_std_lazy_statics = "deny"
non_zero_suggestions = "deny"
option_as_ref_cloned = "deny"
option_if_let_else = "deny"
option_option = "deny"
or_fun_call = "deny"
partialeq_to_none = "deny"
path_buf_push_overwrite = "deny"
ptr_cast_constness = "deny"
pub_underscore_fields = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
read_zero_byte_vec = "deny"
redundant_clone = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
redundant_pub_crate = "deny"
redundant_type_annotations = "deny"
ref_as_ptr = "deny"
ref_binding_to_reference = "deny"
ref_option = "deny"
ref_option_ref = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
same_name_method = "deny"
semicolon_if_nothing_returned = "deny"
semicolon_inside_block = "deny"
set_contains_or_insert = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
single_option_map = "deny"
stable_sort_primitive = "deny"
string_lit_as_bytes = "deny"
string_lit_chars_any = "deny"
str_split_at_newline = "deny"
suspicious_operation_groupings = "deny"
tests_outside_test_module = "deny"
trait_duplication_in_bounds = "deny"
transmute_ptr_to_ptr = "deny"
transmute_undefined_repr = "deny"
trivially_copy_pass_by_ref = "deny"
trivial_regex = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
undocumented_unsafe_blocks = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_join = "deny"
unnecessary_literal_bound = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unnecessary_semicolon = "deny"
unnecessary_struct_initialization = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
unsafe_derive_deserialize = "deny"
unused_async = "deny"
unused_peekable = "deny"
unused_result_ok = "deny"
unused_rounding = "deny"
unused_self = "deny"
unused_trait_names = "deny"
use_debug = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
useless_let_if_seq = "deny"
use_self = "deny"
verbose_file_reads = "deny"
while_float = "deny"
wildcard_dependencies = "deny"
wildcard_enum_match_arm = "deny"
wildcard_imports = "deny"
zero_sized_map_values = "deny"
